<resources>
    <string name="app_name">Sudoku with highscore</string>
    <string name="main_title">Sudoku with highscore</string>
    <string name="label_continue">Continue</string>
    <string name="label_new_game">New Game</string>
    <string name="label_info">Information</string>
    <string name="label_exit">Exit</string>
    <string name="info_title">Informacje</string>
    <string name="info_text">/Gra sudoku.
        Endeavour by Ron Gelinas Chillout Lounge | https://soundcloud.com/atmospheric-music-portal
        Music promoted by https://www.free-stock-music.com
        Creative Commons Attribution 3.0 Unported License
        https://creativecommons.org/licenses/by/3.0/deed.en_US </string>
    <string name="label_score">scoreboard</string>
    <string name="label_settings">Settings</string>
    <string name="settings_title">Sudoku settings</string>
    <string name="settings_shortcut">s</string>
    <string name="music_tittle">Music</string>
    <string name="music_summary">Play music in background</string>
    <string name="clues_tittle">Clues</string>
    <string name="clues_summary">Show clues in the game</string>
    <string name="new_game_title">New Game</string>
    <string name="label_easy">Easy</string>
    <string name="label_medium">Medium</string>
    <string name="label_hard">Hard</string>
    <string name="game_tittle">Sudoku game</string>
    <string name="label_no_more_moves">No more moves</string>
    <string name="keyboard_title">Keyboard</string>
</resources>